Se ingresa una nueva linea de codigo

--- a/prueba.html
+++ b/prueba.html
@@ -6,6 +6,9 @@
     <title>esto es una prueba del funcionamiento de git</title>
 </head>
 <body>
+    <div>
+        <h1>Se verifica una prueba</h1>
+    </div>
     
 </body>
 </html>
